New buttons for white, yellow, green, blue papers

--- a/views/index.jade
+++ b/views/index.jade
@@ -25,6 +25,10 @@ block body
 
 	div.buttons
 		i#create-card.fa.fa-plus-circle.fa-2x.bottom-icon
+		i#create-card-white.fa.fa-plus-circle.fa-2x.bottom-icon-white
+		i#create-card-yellow.fa.fa-plus-circle.fa-2x.bottom-icon-yellow
+		i#create-card-green.fa.fa-plus-circle.fa-2x.bottom-icon-green
+		i#create-card-blue.fa.fa-plus-circle.fa-2x.bottom-icon-blue
 		i#smallify.fa.fa-expand.fa-2x.bottom-icon
 
 
