--- a/client/css/style.css
+++ b/client/css/style.css
@@ -166,9 +166,53 @@ h2 {
 	opacity: .4;
 }
 
+.bottom-icon-white {
+	padding: 5px;
+	opacity: .4;
+	color: white;
+}
+
+.bottom-icon-green {
+	padding: 5px;
+	opacity: .4;
+	color: green;
+}
+
+.bottom-icon-blue {
+	padding: 5px;
+	opacity: .4;
+	color: blue;
+}
+
+.bottom-icon-yellow {
+	padding: 5px;
+	opacity: .4;
+	color: yellow;
+}
+
 .bottom-icon:hover {
 	padding: 5px;
 	opacity: .6;
+}
+
+.bottom-icon-white:hover {
+	padding: 5px;
+	opacity: .8;
+}
+
+.bottom-icon-green:hover {
+	padding: 5px;
+	opacity: .8;
+}
+
+.bottom-icon-blue:hover {
+	padding: 5px;
+	opacity: .8;
+}
+
+.bottom-icon-yellow:hover {
+	padding: 5px;
+	opacity: .8;
 }
 
 .faded-icon {
