--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -1,6 +1,6 @@
 .card {
-	width: 230px;
-	height: 152px;
+	width: 290px;
+	height: 184px;
 	xpadding: 5px; float: left;
 	xmargin: 0 10px 10px 0;
 	font-size: .9em;
@@ -43,12 +43,12 @@
 .content {
 	overflow: hidden;
 	display: block;
-	width: 158px;
-	height: 88px;
-	margin: 5px 23px 0px 34px;
+	width: 200px;
+	height: 150px;
+	margin: 5px 5px 0px 45px;
 
-	font-family: 'Covered By Your Grace',"Arial Rounded MT Bold", arial, serif;
-	font-size: 18px;
+	font-family: 'Arial',"Arial Rounded MT Bold", arial, serif;
+	font-size: 22px;
 	letter-spacing: 0px;
 
 	xtext-shadow: 0px 0px 1px #444;
