--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,6 +1,3 @@
-
-
-
 body {
 	font-family: 'Helvetica Neue Light', arial, serif;
 	font-size: 13px;
@@ -13,8 +10,6 @@ body {
 	xheight: 1400px;
 	xwidth: 2000px;
 
-
-
 	user-select: none;
 	-o-user-select:none;
 	-moz-user-select: none;
@@ -22,7 +17,6 @@ body {
 	-webkit-user-select: none;
 
 	background-image: url('bg/concrete_wall_2_2.png');
-
 }
 
 #board {
@@ -70,12 +64,9 @@ body {
 	background-image: url('scribbles2.png');
 }
 
-
-
 .hover .content {
 	xborder: solid rgba(92, 157, 181,0.5) 3px;
 }
-
 
 .card-icon {
 display:none;
@@ -106,10 +97,7 @@ width: 16px; height: 16px;
 	width: 100%;
 	color: #330066;
 	color: #666;
-
 }
-
-
 
 .board-table {
 	xz-index: 1;
@@ -159,6 +147,12 @@ h2 {
 	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
 	color: #5c9db4;
 	font-size: 18px;
+	}
+
+h3 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	font-size: 14px;
 	}
 
 .bottom-icon {
@@ -234,6 +228,20 @@ h2 {
 	position: absolute; right: 3px; top: 224px; display: none; opacity: .15;
 }
 #delete-col:hover {
+	opacity: .5;
+}
+
+#add-row {
+	position: absolute; right: 3px; top: 250px; display: none; opacity: .15;
+}
+#add-row:hover {
+	opacity: .5;
+}
+
+#delete-row {
+	position: absolute; right: 3px; top: 274px; display: none; opacity: .15;
+}
+#delete-row:hover {
 	opacity: .5;
 }
 
@@ -417,81 +425,6 @@ xopacity: .5;
 	top: 1px;
 }
 
-/*.sticker-red {
-	background-image: url('../images/stickers/sticker-red.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-blue {
-	background-image: url('../images/stickers/sticker-blue.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-yellow {
-	background-image: url('../images/stickers/sticker-yellow.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-green {
-	background-image: url('../images/stickers/sticker-green.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-gold {
-	background-image: url('../images/stickers/sticker-gold.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-bluestar {
-	background-image: url('../images/stickers/sticker-bluestar.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-silverstar {
-	background-image: url('../images/stickers/sticker-silverstar.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-redstar {
-	background-image: url('../images/stickers/sticker-redstar.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-pink {
-	background-image: url('../images/stickers/sticker-pink.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-orange {
-	background-image: url('../images/stickers/sticker-orange.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-lightblue {
-	background-image: url('../images/stickers/sticker-lightblue.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}
-
-.sticker-purple {
-	background-image: url('../images/stickers/sticker-purple.png');
-	background-repeat: no-repeat;
-	background-position: right bottom;
-}*/
-
-
-
-
 /* Stuff for landing page */
 h1.home {
 	font-size: 100px;
@@ -560,9 +493,6 @@ input:hover {
 	color: black;
 
 	xborder: solid 1px;
-
-
-
 }
 
 .notice-bar {
@@ -587,7 +517,6 @@ input:hover {
 	position: absolute; bottom: 0; right: 70px;
 	z-index: 1;
 }
-
 
 .card-hover-draggable {
 	xborder: 1px dashed blue;
@@ -615,11 +544,6 @@ img {
 	bottom: 4px;
 }
 
-
-
-
-
-
 .filler {
 	xwidth: 100%;
 	xbackground-color: rgba(255,0,0,0.1);
@@ -634,9 +558,6 @@ img {
 	color: #999
 }
 
-
-
-
 /* states and images */
 .ui-icon { width: 16px; height: 16px; background-image: url(../images/ui-icons_222222_256x240.png); }
 .ui-widget-content .ui-icon {background-image: url(../images/ui-icons_222222_256x240.png); }
@@ -646,7 +567,6 @@ img {
 .ui-state-active .ui-icon {background-image: url(../images/ui-icons_454545_256x240.png); }
 .ui-state-highlight .ui-icon {background-image: url(../images/ui-icons_2e83ff_256x240.png); }
 .ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(../images/ui-icons_cd0a0a_256x240.png); }
-
 
 .ui-resizable { position: relative;}
 .ui-resizable-handle { position: absolute;font-size: 0.1px;z-index: 99999; display: block;}
@@ -661,3 +581,36 @@ img {
 .ui-resizable-ne { cursor: ne-resize; width: 9px; height: 9px; right: -5px; top: -5px;}
 
 .ui-icon-gripsmall-diagonal-se { background-position: -64px -224px; }
+
+.row-line {
+	text-align: left;
+	horizontal-align: left;
+	vertical-align: top;
+	cursor: n-resize;
+	width: 1px;
+	height: 40px;
+	background-image: url('../images/blue-board-line.png');
+	background-repeat: repeat-x;
+	background-position: left bottom;
+	overflow: auto;
+}
+
+.row-icon {
+    display:none;
+    position: absolute;
+    top: 8px; left: 8px;
+    opacity: .3;
+    width: 15px; height: 15px;
+}
+
+.row-icon-hover {
+	opacity: .9;
+}
+
+.row-text {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	font-size: 14px;
+	font-weight: bold;
+	width: 100px;
+}
