--- a/views/home.jade
+++ b/views/home.jade
@@ -30,7 +30,7 @@ body
 						p.home example board:
 						p.home!= '<a href="http://' + locals.url + '/demo">' + locals.url + '/demo</a>'
 						<br><br><br>
-						p.home.small sourcecode at <a href="https://github.com/aliasaria/scrumblr">github</a>
+						p.home.small sourcecode (fork) at <a href="https://github.com/lspevak/scrumblr">github</a>
 
 	div.stickers
 		div.sticker#sticker-red
