--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,8 +15,8 @@ html(lang="en")
 		<!-- SCRIPTS -->
 
 		<!-- jQuery -->
-		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-		<script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+		<script src="//code.jquery.com/jquery-1.12.4.min.js"></script>
+		<script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
 		<!-- External Scripts -->
 		<script src="lib/jquery.ui.touch-punch.min.js"></script>
