--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block body
     - if (locals.demo)
-        div.notice-bar this is a demo board. to make a private board, go to <a href="/demo">/demo</a>
+        div.notice-bar this is a demo board. to make a private board, go to <a href="/">home page</a>
 
     h1 <a href="http://scrumblr.ca">scrumblr</a> by <a href="http://aliasaria.ca">aliasaria</a>
 
