--- a/views/index.jade
+++ b/views/index.jade
@@ -25,8 +25,10 @@ block body
         i#create-card-yellow.fa.fa-plus-circle.fa-2x.bottom-icon-yellow
         i#create-card-green.fa.fa-plus-circle.fa-2x.bottom-icon-green
         i#create-card-blue.fa.fa-plus-circle.fa-2x.bottom-icon-blue
-        i#smallify.fa.fa-expand.fa-2x.bottom-icon
-
+        i#create-card-orange.fa.fa-plus-circle.fa-2x.bottom-icon-orange
+        i#create-card-purple.fa.fa-plus-circle.fa-2x.bottom-icon-purple
+        i#create-card-red.fa.fa-plus-circle.fa-2x.bottom-icon-red
+        i#smallify.fa.fa-expand.fa-2x.bottom-icon(alt='Switch to S/M/L dashboard', title='Switch to S/M/L dashboard')
 
     div.stickers
         div.sticker#sticker-red
