--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,11 +14,9 @@ html(lang="en")
 
 		<!-- SCRIPTS -->
 
-		<!-- jQuery -->
-		<script src="//code.jquery.com/jquery-1.12.4.min.js"></script>
-		<script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-
-		<!-- External Scripts -->
+		<!-- jQuery - https://code.jquery.com -->
+		<script src="lib/jquery-1.12.4.min.js"></script>
+		<script src="lib/jquery-ui-1.12.1.min.js"></script>
 		<script src="lib/jquery.ui.touch-punch.min.js"></script>
 		<script src="lib/jquery.jeditable.js"></script>
 		<script src="lib/jquery.blockUI.js"></script>
