--- a/client/css/mediumcards.css
+++ b/client/css/mediumcards.css
@@ -4,17 +4,11 @@
 	xpadding: 5px; float: left;
 	xmargin: 0 10px 10px 0;
 	font-size: .9em;
-
-
-
 	overflow: hidden;
-
 	position: absolute;
 	z-index: 10;
-
 	top: 460px;
 	left: 0px;
-
 	display: block;
 }
 
@@ -46,22 +40,16 @@
 	width: 158px;
 	height: 88px;
 	margin: 5px 23px 0px 34px;
-
 	font-family: 'Arial',"Arial Rounded MT Bold", arial, serif;
 	font-size: 18px;
 	letter-spacing: 0px;
-
 	xtext-shadow: 0px 0px 1px #444;
-
 	opacity: 1;
-
 	color: black;
-	text-align: center;
+	text-align: left;
 	padding-top: 18px;
 	xline-height: 16px;
-
 	xopacity: .8;
-
 }
 
 .filler {
@@ -72,4 +60,45 @@
 
 .stickertarget {
 	position: absolute;
+}
+
+.content h1 {
+	font-family: 'Arial', "Arial Rounded MT Bold", arial, serif;
+	color: black;
+	letter-spacing: 0px;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.content h2 {
+	font-family: 'Arial', "Arial Rounded MT Bold", arial, serif;
+	color: black;
+	letter-spacing: 0px;
+	font-size: 18px;
+	font-weight: bold;
+	font-style: italic;
+}
+
+.content h3 {
+	font-family: 'Arial', "Arial Rounded MT Bold", arial, serif;
+	color: black;
+	letter-spacing: 0px;
+	font-size: 16px;
+	font-weight: bold;
+	font-style: italic;
+}
+
+.content ul {
+	margin-left: 20px;
+}
+
+.content * {
+	margin-top: 0;
+	margin-left: 0;
+	margin-bottom: 0;
+	margin-right: 0;
+	padding-top: 0;
+	padding-bottom: 0;
+	padding-left: 0;
+	padding-right: 0;
 }
