--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,9 @@ html(lang="en")
 		<script src="lib/jquery.jeditable.js"></script>
 		<script src="lib/jquery.blockUI.js"></script>
 
+		<!-- https://cdn.jsdelivr.net/npm/marked/marked.min.js -->
+		<script src="lib/marked.min.js"></script>
+
 		<!-- Socket.IO -->
 		<script src="socket.io/socket.io.js"></script>
 
