--- a/client/css/style.css
+++ b/client/css/style.css
@@ -81,6 +81,7 @@ body {
 display:none;
 position: absolute;
 top: 3%; left: 82%;
+/* top: 0%; right: 20px; */
 opacity: .3;
 width: 16px; height: 16px;
 }
