--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -48,7 +48,8 @@
 		height: 88px;
 		margin: 5px 23px 0px 34px;
 	*/
-	width: calc(100% - 20px);
+	/* width: calc(100% - 20px); */
+	width: calc(100% - 50px);
 	height: calc(100% - 30px);
 	/* text-align: center; */
 	top: 8px;
@@ -64,7 +65,7 @@
 	opacity: 1;
 
 	color: black;
-	text-align: center;
+	/* text-align: center; */
 	/* padding-top: 18px; */
 	padding-top: 8px;
 	padding-left: 8px;
@@ -76,14 +77,15 @@
 
 
 .filler {
-	/*
+	/**/
 		margin-right: 34px;
 		margin-bottom: 42px;
 		margin-left: 25px;
+	/**/
+	/* 
+		margin-right: 10px;
+		margin-bottom: 6px;
 	*/
-	margin-right: 10px;
-	margin-bottom: 6px;
-	/*margin-left: 25px;*/
 	
 }
 
