--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -1,6 +1,7 @@
 .card {
 	width: 230px;
 	height: 152px;
+
 	xpadding: 5px; float: left;
 	xmargin: 0 10px 10px 0;
 	font-size: .9em;
@@ -49,12 +50,15 @@
 		margin: 5px 23px 0px 34px;
 	*/
 	/* width: calc(100% - 20px); */
-	width: calc(100% - 50px);
-	height: calc(100% - 30px);
+	/* width: calc(100% - 50px); */
+	width: 100%;
+	height: 100%;
+	/* height: calc(100% - 30px); */
 	/* text-align: center; */
 	top: 8px;
 	/*margin: auto;*/
-	margin: 5px 23px 0px 34px;
+	margin: auto;
+	/* margin: 5px 23px 0px 34px; */
 
 	font-family: 'Covered By Your Grace',"Arial Rounded MT Bold", arial, serif;
 	font-size: 18px;
@@ -65,7 +69,7 @@
 	opacity: 1;
 
 	color: black;
-	/* text-align: center; */
+	text-align: center;
 	/* padding-top: 18px; */
 	padding-top: 8px;
 	padding-left: 8px;
