--- a/client/css/style.css
+++ b/client/css/style.css
@@ -97,7 +97,7 @@ width: 16px; height: 16px;
 	background-color:inherit;
 	xvertical-align: inherit;
 	font-family: inherit;
-	text-align: center;
+	/* text-align: center; */
 	xcolor: #444;
 	padding: 0;
 	margin: 0;
