--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -1,10 +1,12 @@
 .card {
-	/*
+	/**/
 		width: 230px;
 		height: 152px;
+	/**/
+	/*
+		width: 168px;
+		height: 109px;
 	*/
-	width: 168px;
-	height: 109px;
 
 	xpadding: 5px; float: left;
 	xmargin: 0 10px 10px 0;
@@ -19,6 +21,9 @@
 	left: 0px;
 
 	display: block;
+	
+	/* border-width: thin medium thick 10px; */
+	border-width: thin 10px;
 }
 
 .pink {
@@ -37,8 +42,10 @@
 	position: absolute;
 	xtop: -10;
 	left: -3px;
-	width: 100%;
-	height: 100%;
+	/* width: 100%; */
+	/* height: 100%; */
+	width: 120%;
+	height: 120%;
 	overflow: hidden;
 	z-index: -1000;
 }
@@ -85,15 +92,15 @@
 
 
 .filler {
-	/*
+	/**/
 		margin-right: 34px;
 		margin-bottom: 42px;
 		margin-left: 25px;
-	 */
 	/**/
+	/** /
 		margin-right: 10px;
 		margin-bottom: 6px;
-	/**/
+	/ **/
 	
 }
 
