--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -1,5 +1,15 @@
+/*
+	card area (.card) -- textarea (.content)
+					 \
+					  card image (.card-image)
+
+	card image size is 230x152, text background size is ~170x100
+	(  )
+ */
+
 .card {
 	/**/
+		/* default size */
 		width: 230px;
 		height: 152px;
 	/**/
@@ -23,7 +33,10 @@
 	display: block;
 	
 	/* border-width: thin medium thick 10px; */
-	border-width: thin 10px;
+	/* border-width: thin 10px; */
+	/* border-width: thin 10px 10px 10px; */
+	/* debug */
+	border: thin dotted blue;
 }
 
 .pink {
@@ -39,18 +52,23 @@
 }
 
 .card-image {
+	/* 230x152, visible size ~170x100 */
 	position: absolute;
 	xtop: -10;
 	left: -3px;
-	/* width: 100%; */
-	/* height: 100%; */
-	width: 120%;
-	height: 120%;
+	/**/ width: 100%; /**/
+	/**/ height: 100%; /**/
+	/* width: 120%; */
+	/* height: 120%; */
 	overflow: hidden;
 	z-index: -1000;
+
+	/* debug */
+	border: thin dotted black;
 }
 
 
+/* textarea */
 .content {
 	/* overflow: hidden; */
 	overflow: overlay;
@@ -88,6 +106,8 @@
 
 	xopacity: .8;
 
+	/* debug */
+	border: thin dotted green;
 }
 
 
