--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -36,8 +36,10 @@
 	/* border-width: thin 10px; */
 	/* border-width: thin 10px 10px 10px; */
 	/* debug */
-	border: thin dotted blue;
+	/* border: thin dotted blue; */
 }
+.card-image:hover { border: thin dotted black; }
+
 
 .pink {
 }
@@ -67,7 +69,7 @@
 	/* border: thin dotted black; */
 }
 /* debug */
-.card-image:hover { border: thin dotted black; }
+.card-image:hover { border: thin dotted blue; }
 
 
 /* textarea */
@@ -83,13 +85,18 @@
 	*/
 	/* width: calc(100% - 20px); */
 	/* width: calc(100% - 50px); */
-	width: 100%;
-	height: 100%;
+	/* width: 100%; */
+	/* height: 100%; */
 	/* height: calc(100% - 30px); */
 	/* text-align: center; */
-	top: 8px;
+	/* top: 8px; */
+
+	top: 6% ; /* 10 / 152. * 100 */
+	left: 13% ; /* 30 / 230 * 100 */
+	width: 74% ; /* 170 / 230 * 100 */
+	height: 66% ; /* 100 / 152 * 100 */
+
 	/*margin: auto;*/
-	margin: auto;
 	/* margin: 5px 23px 0px 34px; */
 
 	font-family: 'Covered By Your Grace',"Arial Rounded MT Bold", arial, serif;
@@ -113,7 +120,7 @@
 	/* border: thin dotted green; */
 }
 /* debug */
-.content:hover { border: thin dotted green; }
+.content:hover { border: thin dotted red; }
 
 
 .filler {
