--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -57,7 +57,7 @@
 	/* 230x152, visible size ~170x100 */
 	position: absolute;
 	xtop: -10;
-	left: -3px;
+	/* left: -3px; */
 	/**/ width: 100%; /**/
 	/**/ height: 100%; /**/
 	/* width: 120%; */
