--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -58,13 +58,14 @@
 	position: absolute;
 	xtop: -10;
 
-	/**/ left: -3px; /**/
+	/** / left: -3px; / **/
+	/**/ left: 3px; /**/
 	/** / width: 100%; / **/
 	/** / height: 100%; / **/
 	/* width: 120%; */
 	/* height: 120%; */
-	width: calc(100% + 3px);
-	height: calc(100% + 2px);
+	width: calc(100% - 3px);
+	height: calc(100% - 2px);
 
 	overflow: hidden;
 	z-index: -1000;
