--- a/client/css/style.css
+++ b/client/css/style.css
@@ -80,7 +80,8 @@ body {
 .card-icon {
 display:none;
 position: absolute;
-top: 3%; left: 82%;
+/* top: 3%; left: 82%; */
+top: 0%; right: 20px; 
 opacity: .3;
 width: 16px; height: 16px;
 }
@@ -96,7 +97,7 @@ width: 16px; height: 16px;
 	background-color:inherit;
 	xvertical-align: inherit;
 	font-family: inherit;
-	text-align: center;
+	/* text-align: center; */
 	xcolor: #444;
 	padding: 0;
 	margin: 0;
