--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -38,7 +38,7 @@
 	/* debug */
 	/* border: thin dotted blue; */
 }
-.card-image:hover { border: thin dotted black; }
+.card:hover { border: thin dotted black; }
 
 
 .pink {
@@ -116,7 +116,8 @@
 	text-align: center;
 	/* padding-top: 18px; */
 	padding-top: 8px;
-	padding-left: 8px;
+	/* padding-left: 8px; */
+	padding-left: 5px;
 	xline-height: 16px;
 
 	xopacity: .8;
