--- a/client/css/smallcards.css
+++ b/client/css/smallcards.css
@@ -56,11 +56,20 @@
 
 /* textarea */
 .content {
-	overflow: hidden;
+	/* overflow: hidden; */
+	overflow: overlay;
+	/* overflow: auto; */
+	
 	display: block;
-	width: 79px;
-	height: 45px;
-	margin: 1px 10px 0px 19px;
+	/* width: 79px; */
+	/* height: 45px; */
+	top: 6% ; /* 10 / 152. * 100 */
+	left: 13% ; /* 30 / 230 * 100 */
+	width: 74% ; /* 170 / 230 * 100 */
+	height: 66% ; /* 100 / 152 * 100 */
+	
+	/* margin: auto; */
+	/* margin: 1px 10px 0px 19px; */
 
 	font-family: "Arial Rounded MT Bold" , arial, serif;
 	font-size: 10px;
