--- a/client/css/smallcards.css
+++ b/client/css/smallcards.css
@@ -14,8 +14,6 @@
 	xmargin: 0 10px 10px 0;
 	font-size: .9em;
 
-
-
 	overflow: hidden;
 
 	position: absolute;
@@ -45,7 +43,7 @@
 .card-image {
 	position: absolute;
 	xtop: -10;
-	xleft: -50;
+	/* xleft: -50; */
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
@@ -59,8 +57,9 @@
 	/* overflow: hidden; */
 	overflow: overlay;
 	/* overflow: auto; */
-	
+
 	display: block;
+
 	/* width: 79px; */
 	/* height: 45px; */
 	top: 6% ; /* 10 / 152. * 100 */
@@ -95,23 +94,6 @@
 }
 
 
-.xcontent {
-	overflow: hidden;
-	display: block;
-	width: 79px;
-	height: 45px;
-	margin: 0px 10px 0px 19px;
-
-	font-family: "Arial Rounded MT Bold", "Arial" , arial, serif;
-	xfont-size: 10px;
-	letter-spacing: 0px;
-	line-height: 8px;
-
-	xtext-shadow: 0px 0px 1px #444;
-
-	opacity: 1;
-
-	color: #333;
-	text-align: center;
-	padding-top: 8px;
+.stickertarget {
+	position: absolute;
 }
