--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -128,6 +128,23 @@
 /* debug */
 .content:hover { border: thin dotted red; }
 
+.content h1 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	/* font-size: 22px; */
+	font-size: 18px; /* I think same size is Ok */
+}
+.content h2 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	font-size: 14px;
+}
+.content h2 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	font-size: 12px;
+}
+
 
 .filler {
 	/**/
