--- a/client/css/smallcards.css
+++ b/client/css/smallcards.css
@@ -79,12 +79,30 @@
 
 	opacity: 1;
 
-	color: #333;
+	/* color: #333; */
+	color: black;
 	text-align: center;
 	padding-top: 8px;
 }
 /* debug */
 .content:hover { border: thin dotted red; }
+
+.content h1 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	/* font-size: 22px; */
+	font-size: 12px; /* I think same size is Ok */
+}
+.content h2 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	font-size: 10px;
+}
+.content h2 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	font-size: 8px;
+}
 
 
 .filler {
