--- a/client/css/smallcards.css
+++ b/client/css/smallcards.css
@@ -1,11 +1,18 @@
+/*
+	card area (.card) -- textarea (.content)
+					 \
+					  card image (.card-image)
+
+	card image size is 230x152, text background size is ~170x100
+	(  )
+ */
+
 .card {
 	width: 115px;
 	height: 76px;
 	xpadding: 5px; float: left;
 	xmargin: 0 10px 10px 0;
 	font-size: .9em;
-
-
 
 	overflow: hidden;
 
@@ -18,6 +25,8 @@
 	display: block;
 
 }
+/* debug */
+.card:hover { border: thin dotted black; }
 
 .pink {
 }
@@ -34,19 +43,32 @@
 .card-image {
 	position: absolute;
 	xtop: -10;
-	xleft: -50;
+	/* xleft: -50; */
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
 	z-index: -1000;
 }
+/* debug */
+.card-image:hover { border: thin dotted blue; }
 
+/* textarea */
 .content {
-	overflow: hidden;
+	/* overflow: hidden; */
+	overflow: overlay;
+	/* overflow: auto; */
+
 	display: block;
-	width: 79px;
-	height: 45px;
-	margin: 1px 10px 0px 19px;
+
+	/* width: 79px; */
+	/* height: 45px; */
+	top: 6% ; /* 10 / 152. * 100 */
+	left: 13% ; /* 30 / 230 * 100 */
+	width: 74% ; /* 170 / 230 * 100 */
+	height: 66% ; /* 100 / 152 * 100 */
+	
+	/* margin: auto; */
+	/* margin: 1px 10px 0px 19px; */
 
 	font-family: "Arial Rounded MT Bold" , arial, serif;
 	font-size: 10px;
@@ -57,9 +79,29 @@
 
 	opacity: 1;
 
-	color: #333;
+	/* color: #333; */
+	color: black;
 	text-align: center;
 	padding-top: 8px;
+}
+/* debug */
+.content:hover { border: thin dotted red; }
+
+.content h1 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	/* font-size: 22px; */
+	font-size: 12px; /* I think same size is Ok */
+}
+.content h2 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	font-size: 10px;
+}
+.content h2 {
+	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
+	color: #5c9db4;
+	font-size: 8px;
 }
 
 
@@ -70,23 +112,6 @@
 }
 
 
-.xcontent {
-	overflow: hidden;
-	display: block;
-	width: 79px;
-	height: 45px;
-	margin: 0px 10px 0px 19px;
-
-	font-family: "Arial Rounded MT Bold", "Arial" , arial, serif;
-	xfont-size: 10px;
-	letter-spacing: 0px;
-	line-height: 8px;
-
-	xtext-shadow: 0px 0px 1px #444;
-
-	opacity: 1;
-
-	color: #333;
-	text-align: center;
-	padding-top: 8px;
+.stickertarget {
+	position: absolute;
 }
