testing formatting adjustments

--- a/client/css/bigcards.css
+++ b/client/css/bigcards.css
@@ -117,7 +117,8 @@
 	/* padding-top: 18px; */
 	padding-top: 8px;
 	/* padding-left: 8px; */
-	padding-left: 5px;
+	/* padding-left: 5px; */
+	padding-left: 2px;
 	xline-height: 16px;
 
 	xopacity: .8;
