--- a/client/css/smallcards.css
+++ b/client/css/smallcards.css
@@ -63,7 +63,8 @@
 	/* width: 79px; */
 	/* height: 45px; */
 	top: 6% ; /* 10 / 152. * 100 */
-	left: 13% ; /* 30 / 230 * 100 */
+	/* left: 13% ; / * 30 / 230 * 100 */
+	left: 15.5% ; /* 30 / 230 * 100 */
 	width: 74% ; /* 170 / 230 * 100 */
 	height: 66% ; /* 100 / 152 * 100 */
 	
@@ -86,7 +87,12 @@
 	padding-top: 8px;
 }
 /* debug */
-.content:hover { border: thin dotted red; }
+/* .content:hover { border: thin dotted red; } */
+/* .content:hover { border: thin dotted rgb(0,255,0); } */
+/* .content:hover { border: thin dotted rgb(192,192,192); } */
+/* .content:hover { border: thin dotted #C0C0C0; } */
+.content:hover { border: thin dotted #B0B0B0; }
+
 
 .content h1 {
 	font-family: 'Rock Salt', "Arial Rounded MT Bold", arial, serif;
