--- a/client/css/smallcards.css
+++ b/client/css/smallcards.css
@@ -85,6 +85,13 @@
 	/* text-align: center; */
 	text-align: left; 
 	padding-top: 8px;
+
+	/* padding-left: 3px; */
+	padding-left: 6px;
+	/* padding-right: 9px; */
+	padding-right: 12px;
+	/* [ https://www.w3schools.com/css/css_padding.asp ] */
+	box-sizing: border-box;
 }
 /* debug */
 /* .content:hover { border: thin dotted red; } */
